Bug 892187 (part 0) - Fix busted GGC builds.  r=bhackett.